configuration/demo-config-map-pod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  demo-config-map-pod

---
apiVersion: v1
kind: Pod
metadata:
  name: demo-config-map-pod-env-manifest
  namespace: demo-config-map-pod
spec:
  containers:
  - name: demo-config-map-pod-env-manifest
    image: bash
    command: ["echo"]
    args: ["$(GREETING) $(HONORIFIC) $(NAME)"]

---
apiVersion: v1
kind: Pod
metadata:
  name: app-config-env-pod
  namespace: demo-config-map-pod
spec:
  containers:
    - name: app-config-env
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: app-config-env-pod-2
  namespace: demo-config-map-pod
spec:
  containers:
    - name: app-config-env
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: app-config-env-pod-3
  namespace: demo-config-map-pod
spec:
  containers:
    - name: app-config-env
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: app-config-env-pod-4
  namespace: demo-config-map-pod
spec:
  containers:
    - name: app-config-env
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "echo $(DATABASE-NAME) $(DATABASE-PORT)" ]
  restartPolicy: Never


---
apiVersion: v1
kind: Pod
metadata:
  name: app-config-env-pod-5
  namespace: demo-config-map-pod
spec:
  containers:
    - name: app-config-volume
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "ls /etc/config/" ]
      volumeMounts:
      - name: config-volume
        mountPath: /etc/config
  volumes:
    - name: config-volume
      configMap:
        name: app-config-from-file
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: app-config-env-pod-6
  namespace: demo-config-map-pod
spec:
  containers:
    - name: app-config-volume
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh","-c","cat /etc/config/keys" ]
      volumeMounts:
      - name: config-volume
        mountPath: /etc/config
  volumes:
    - name: config-volume
      configMap:
        name: app-config-from-file
        items:
        - key: app.properties
          path: keys
  restartPolicy: Never
