configuration/demo-pull-secret.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  demo-pull-secret

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: demo-pull-secret
  name: demo-pull-secret
  namespace: demo-pull-secret
spec:
  containers:
  - name: demo-pull-secret
    image: %DOCKER_USER%/%PRIVATE_IMAGE%
    imagePullPolicy: IfNotPresent
  restartPolicy: Always

  imagePullSecrets:
    - name: demo-pull-secret
