configuration/demo-secret-pod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  demo-secret-pod

---
apiVersion: v1
kind: Pod
metadata:
  name: demo-secret-pod
  namespace: demo-secret-pod
spec:
  containers:
    - name: demo-secret-pod
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: demo-secret-pod-2
  namespace: demo-secret-pod
spec:
  containers:
    - name: demo-secret-pod
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: demo-secret-pod-3
  namespace: demo-secret-pod
spec:
  containers:
    - name: demo-secret-pod
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "echo $(DATABASE-USERNAME) $(DATABASE-PASSWORD)" ]
  restartPolicy: Never


---
apiVersion: v1
kind: Pod
metadata:
  name: demo-secret-pod-4
  namespace: demo-secret-pod
spec:
  containers:
    - name: demo-secret-pod
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "ls /etc/config/" ]
      volumeMounts:
      - name: config-volume
        mountPath: /etc/config
  volumes:
    - name: config-volume
      secret:
        secretName: database-secret
  restartPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: demo-secret-pod-5
  namespace: demo-secret-pod
spec:
  containers:
    - name: demo-secret-pod
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh","-c","cat /etc/config/keys" ]
      volumeMounts:
      - name: config-volume
        mountPath: /etc/config
  volumes:
    - name: config-volume
      secret:
        secretName: database-secret
        items:
        - key: username
          path: keys
  restartPolicy: Never
