configuration/demo-ingress-basic-auth.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-ingress-basic-auth

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-ingress-basic-auth
  labels:
    app: demo-ingress-basic-auth
  namespace: demo-ingress-basic-auth
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: demo-ingress-basic-auth
  template:
    metadata:
      labels:
        app: demo-ingress-basic-auth
    spec:
      containers:
      - name: demo-ingress-basic-auth
        image: neotkm/pod-healthcheck:v0.05
---
kind: Service
apiVersion: v1
metadata:
  namespace: demo-ingress-basic-auth
  name: demo-ingress-basic-auth
spec:
  selector:
    app: demo-ingress-basic-auth
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 2020

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress-basic-auth
  namespace: demo-ingress-basic-auth
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-ingress-basic-auth
          servicePort: 80
